STYLE: card-info class

--- a/projects/1-newbie/nft-preview-card-component-main/index.html
+++ b/projects/1-newbie/nft-preview-card-component-main/index.html
@@ -45,10 +45,17 @@
         <p>Our Equilibrium collection promotes balance and calm.</p>
       </div>
       <div class="card-info">
-        <div class="card-info-left">0.041 ETH</div>
-        <div class="card-info-right">3 days left Creation of Jules Wyvern</div>
+        <div class="card-info-left">
+          <img src="./images/icon-ethereum.svg" alt="icon-ethereum" />
+          0.041 ETH
+        </div>
+        <div class="card-info-right">
+          <img src="./images/icon-clock.svg" alt="" /> 3 days left
+        </div>
       </div>
-      <div class="card-footer"></div>
+      <div class="card-footer">
+        <span>Creation of Jules Wyvern</span>
+      </div>
     </div>
 
     <div class="attribution">
