--- a/projects/1-newbie/nft-preview-card-component-main/index.html
+++ b/projects/1-newbie/nft-preview-card-component-main/index.html
@@ -21,19 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
-
     <title>NFT preview card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="card">
@@ -54,7 +42,8 @@
         </div>
       </div>
       <div class="card-footer">
-        <span>Creation of Jules Wyvern</span>
+        <img src="./images/image-avatar.png" alt="image-avatar" />
+        <p>Creation of <span>Jules Wyvern</span></p>
       </div>
     </div>
 
@@ -62,7 +51,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="https://nescalan.github.io/nelson-portfolio/">Ing. Nelson GE</a>.
     </div>
   </body>
 </html>
