--- a/index.html
+++ b/index.html
@@ -1,220 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontendmentor</title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;600;700&family=Cabin:wght@400;600;700&family=Martel+Sans:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,0,0"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/index.css" />
-  </head>
-  <body>
-    <header class="header container">
-      <div class="logo-container">
-        <input id="btn-menu" type="checkbox" name="menu" />
-        <label for="btn-menu">
-          <img src="./img/menu.svg" alt="" />
-        </label>
-        <div class="logo-mobile">
-          <img
-            src="./img/nelson-logo-375px.png"
-            alt="nelson logo for desktop devices"
-          />
-          <span>Nelson Gonzalez</span>
-        </div>
-        <div class="logo-desktop">
-          <img
-            src="./img/nelson-logo-768px.png"
-            alt="nelson logo for desktop devices"
-          />
-        </div>
-        <ul class="navbar">
-          <li><a href="#newbie">Newbie</a></li>
-          <li><a href="#junior">Junior</a></li>
-          <li><a href="#intermediate">Intermediate</a></li>
-          <li><a href="#advanced">Advanced</a></li>
-          <li><a href="#guru">Guru</a></li>
-        </ul>
-      </div>
-    </header>
-    <main class="main">
-      <section class="hero">
-        <span class="hero-title container">
-          Nelson Gonzalez Frontend Developer Based in Costa Rica
-        </span>
-        <img
-          src="https://i.postimg.cc/0NC8b84F/1-Nelson-1.jpg"
-          alt="nelson Portfolio picture"
-        />
-      </section>
-
-      <!-- NEWBIE -->
-      <section id="newbie" class="secondary-bg">
-        <p>Newbie</p>
-        <div class="flex-wrapper container">
-          <div class="card">
-            <a
-              href="./projects/1-newbie/interactive-rating-component-main/rating-component.html"
-            >
-              <img
-                src="./img/newbie/interactive-rating-component-main.webp"
-                alt="interactive-rating-component-main"
-              />
-            </a>
-            <div class="text">
-              <span>Interactive rating component</span>
-              <p>
-                This is a nice, small project to practice handling user
-                interactions and updating the DOM. Perfect for anyone who has
-                learned the basics of JavaScript!
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <a href="./projects/1-newbie/skilled-elearning-landing-page/">
-              <img
-                src="./img/newbie/qr-code-component-main.webp"
-                alt="Proyecto Saturno"
-                width="50px"
-              />
-            </a>
-            <div class="text">
-              <span>QR code component</span>
-              <p>
-                A perfect first challenge for practice HTML and CSS. The card
-                layout doesn't shift, so the idea is to learned about building
-                responsive layouts.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="flex-wrapper container">
-          <div class="card">
-            <a href="./projects/1-newbie/skilled-landing-page/index.html">
-              <img
-                src="./img/newbie/skilled-landing-page.webp"
-                alt="skilled Landing Page"
-              />
-            </a>
-            <div class="text">
-              <span>Skilled Elearning Landing Page</span>
-              <p>
-                This is a web site think for an on line Institute or university.
-                You can find an interesting landing page design with nice UI
-                interfase.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <a
-              href="./projects/1-newbie/nft-preview-card-component-main/index.html"
-            >
-              <img
-                src="./img/newbie/nft-preview-card-component-4.webp"
-                alt="NTF Preview Card Component"
-              />
-            </a>
-            <div class="text">
-              <span>NFT preview card component</span>
-              <p>
-                This HTML & CSS only challenge is perfect for anyone just
-                starting out or anyone wanting a small project to play around
-                with.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Ejercicios -->
-      <section id="ejercicios">
-        <p>Ejercicios en Clase</p>
-
-        <h2>Semana 3</h2>
-        <div class="flex-wrapper container">
-          <div class="card">
-            <a href="./ejercicios/formularios/formularios.html">
-              <img src="./img/formulario.png" alt="Ejercicio de Formularios" />
-            </a>
-            <div class="text">
-              <span>Formularios</span>
-              <p>
-                Aquí tuve dos objetivos principales: Primero entender las
-                características de los formularios en HTML y segundo cómo
-                dibujarlos en combinación con CSS.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <a href="./practica-02/ejercicio-02/flexbox.html">
-              <img src="./img/box-model.png" alt="Ejercicio Modelo de Caja" />
-            </a>
-            <div class="text">
-              <span>Modelo de Caja</span>
-              <p>
-                Esta es la base para lograr resolver el primer ejercicio
-                correspondiente a la segunda práctica que evaluava los
-                conocimientos sobre el modelo de caja y flexbox.
-              </p>
-            </div>
-          </div>
-        </div>
-        <h2>Semanas: 4, 5 y 6</h2>
-        <div class="flex-wrapper container">
-          <div class="card">
-            <img src="./img/under_construction.svg" alt="En construccion" />
-            <div class="text">
-              <span>En construcción</span>
-              <p>
-                Próximamente publicaré los nuevos ejercicios correspondientes a
-                las semanas 4, 5 y 6.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <a href="./ejercicios/tienda/index.html">
-              <img src="./img/christal.png" alt="tienda de cristales" />
-            </a>
-            <div class="text">
-              <span>Mi Tienda</span>
-              <p>Ejemplo de una tienda que vende cristales.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div class="container">
-        <div class="footer-wrapper">
-          <div class="flex-item">
-            <h2>Universidad Cenfotec</h2>
-            <p>Primer módulo, curso de Diseño de Interfases Web</p>
-          </div>
-          <div class="flex-item">
-            <h2>Información:</h2>
-            <p>Correo: nescalan@gmail.com</p>
-            <p>Teléfono: +506 8828-5888</p>
-            <p>País: Costa Rica</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="./newbie/interactive-rating-component-main/js/script.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>portfolio</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"></head><body><header></header><main><!-- Start: Articles Cards --><div class="container py-4 py-xl-5"><div class="row mb-5"><div class="col-md-8 col-xl-6 text-center mx-auto"><h2>Portfolio</h2><p>This is a series of components based on the challenges published on the website www.frontendmentor.io</p></div></div><div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3"><div class="col"><div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;background: url(&quot;https://res.cloudinary.com/dz209s6jk/image/upload/f_auto,q_auto,w_700/Challenges/wbsdema37uawkvkp9lab.jpg&quot;);" src="https://res.cloudinary.com/dz209s6jk/image/upload/f_auto,q_auto,w_700/Challenges/wbsdema37uawkvkp9lab.jpg"><div class="card-body p-4"><h4 class="card-title">Four card feature section</h4><p class="card-text">A nice layout-based challenge for beginners. This will test anyone who is new to multi-column and responsive layouts.</p><div class="d-flex"><button class="btn btn-primary" type="button">Button</button></div></div></div></div><div class="col"><div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><div class="card-body p-4"><h4 class="card-title">Lorem libero donec</h4><p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><div><p class="fw-bold mb-0">John Smith</p><p class="text-muted mb-0">Erat netus</p></div></div></div></div></div><div class="col"><div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><div class="card-body p-4"><h4 class="card-title">Lorem libero donec</h4><p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><div><p class="fw-bold mb-0">John Smith</p><p class="text-muted mb-0">Erat netus</p></div></div></div></div></div></div></div><!-- End: Articles Cards --></main><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script></body></html>
