--- a/index.html
+++ b/index.html
@@ -1,67 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/styles.min.css" />
+  </head>
 
-<body>
-    <header></header>
+  <body>
     <main>
-        <!-- Start: Articles Cards -->
-        <div class="container py-4 py-xl-5">
-            <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2>Portfolio</h2>
-                    <p>This is a series of components based on the challenges published on the website www.frontendmentor.io</p>
+      <!-- Start: Articles Cards -->
+      <div class="container py-4 py-xl-5">
+        <!-- TITLE: Cards Title -->
+        <div class="row mb-5">
+          <div class="col-md-8 col-xl-6 text-center mx-auto">
+            <h2>Portfolio</h2>
+            <p>
+              This is a series of components based on the challenges published
+              on the website www.frontendmentor.io
+            </p>
+          </div>
+        </div>
+        <!-- Cards -->
+        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+          <div class="col">
+            <div class="card">
+              <a href=""></a>
+              <div class="card-body p-4">
+                <h4 class="card-title">Four card feature section</h4>
+                <p class="card-text">
+                  A nice layout-based challenge for beginners. This will test
+                  anyone who is new to multi-column and responsive layouts.
+                </p>
+                <div class="d-flex">
+                  <button class="btn btn-primary" type="button">Button</button>
                 </div>
+              </div>
             </div>
-            <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;background: url(&quot;https://res.cloudinary.com/dz209s6jk/image/upload/f_auto,q_auto,w_700/Challenges/wbsdema37uawkvkp9lab.jpg&quot;);" src="assets/img/four-card-section.webp">
-                        <div class="card-body p-4">
-                            <h4 class="card-title">Four card feature section</h4>
-                            <p class="card-text">A nice layout-based challenge for beginners. This will test anyone who is new to multi-column and responsive layouts.</p>
-                            <div class="d-flex"><button class="btn btn-primary" type="button">Button</button></div>
-                        </div>
-                    </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                class="card-img-top w-100 d-block fit-cover"
+                style="height: 200px"
+                src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+              />
+              <div class="card-body p-4">
+                <h4 class="card-title">Lorem libero donec</h4>
+                <p class="card-text">
+                  Nullam id dolor id nibh ultricies vehicula ut id elit. Cras
+                  justo odio, dapibus ac facilisis in, egestas eget quam. Donec
+                  id elit non mi porta gravida at eget metus.
+                </p>
+                <div class="d-flex">
+                  <img
+                    class="rounded-circle flex-shrink-0 me-3 fit-cover"
+                    width="50"
+                    height="50"
+                    src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                  />
+                  <div>
+                    <p class="fw-bold mb-0">John Smith</p>
+                    <p class="text-muted mb-0">Erat netus</p>
+                  </div>
                 </div>
-                <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                        <div class="card-body p-4">
-                            <h4 class="card-title">Lorem libero donec</h4>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                            <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                                <div>
-                                    <p class="fw-bold mb-0">John Smith</p>
-                                    <p class="text-muted mb-0">Erat netus</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                        <div class="card-body p-4">
-                            <h4 class="card-title">Lorem libero donec</h4>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                            <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                                <div>
-                                    <p class="fw-bold mb-0">John Smith</p>
-                                    <p class="text-muted mb-0">Erat netus</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
-        </div><!-- End: Articles Cards -->
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                class="card-img-top w-100 d-block fit-cover"
+                style="height: 200px"
+                src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+              />
+              <div class="card-body p-4">
+                <h4 class="card-title">Lorem libero donec</h4>
+                <p class="card-text">
+                  Nullam id dolor id nibh ultricies vehicula ut id elit. Cras
+                  justo odio, dapibus ac facilisis in, egestas eget quam. Donec
+                  id elit non mi porta gravida at eget metus.
+                </p>
+                <div class="d-flex">
+                  <img
+                    class="rounded-circle flex-shrink-0 me-3 fit-cover"
+                    width="50"
+                    height="50"
+                    src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                  />
+                  <div>
+                    <p class="fw-bold mb-0">John Smith</p>
+                    <p class="text-muted mb-0">Erat netus</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End: Articles Cards -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+  </body>
 </html>
