--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>portfolio</title>
+    <link
+      rel="shortcut icon"
+      href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+      type="image/x-icon"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="assets/css/styles.min.css" />
+    <title>portfolio</title>
   </head>
 
   <body>
@@ -30,21 +35,7 @@
         </div>
         <!-- Cards -->
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-          <div class="col">
-            <div class="card">
-              <a href=""></a>
-              <div class="card-body p-4">
-                <h4 class="card-title">Four card feature section</h4>
-                <p class="card-text">
-                  A nice layout-based challenge for beginners. This will test
-                  anyone who is new to multi-column and responsive layouts.
-                </p>
-                <div class="d-flex">
-                  <button class="btn btn-primary" type="button">Button</button>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div id="card-element" class="col"></div>
           <div class="col">
             <div class="card">
               <img
@@ -107,6 +98,12 @@
       </div>
       <!-- End: Articles Cards -->
     </main>
+
+    <!-- SCRIPT: Bootstrap Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- SCRIPTS: jQuery Google CDN Page -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <!-- SCRIPT: jQuery App File -->
+    <script src="./assets/js/jQuery.js"></script>
   </body>
 </html>
